# roxy

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
src/: main.rs
src/engines/: duckduckgo.rs  mod.rs  wikimedia.rs  yacy.rs
src/models/: search.rs
