[package]
name = "roxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.15"
async-graphql-rocket = "7.0.15"
chrono = "0.4.39"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
mwapi = "0.6.1"
anyhow = "1.0.96"
reqwest = "0.11.27"
tracing = "0.1.41"
urlencoding = "2.1.3"
lazy_static = "1.5.0"
regex = "1.11.1"
html-escape = "0.2.13"
scraper = "0.22.0"
url = "2.5.4"
